--- a/assets/style.css
+++ b/assets/style.css
@@ -20,3 +20,22 @@ section {
 .content {
     text-align: center;
 }
+/* external css: flickity.css */
+.carousel-cell {
+    width: 50%;
+    height: 200px;
+    margin-right: 10px;
+    background: gray;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+}
+
+/* cell number */
+.carousel-cell:before {
+    display: block;
+    text-align: center;
+    content: counter(carousel-cell);
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+}
