--- a/assets/style.css
+++ b/assets/style.css
@@ -89,8 +89,7 @@ main {
     color: white;
 
   }
-=======
-}
+
 html {
     background-image: linear-gradient(#FC5E55, #FA4083);
 }
@@ -182,3 +181,70 @@ footer {
     color: white;
 }
 
+/* No Merege Conflicts */
+/* external css: flickity.css */
+.carousel-cell {
+    width: 50%;
+    height: 200px;
+    margin-right: 10px;
+    background: gray;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+}
+
+/* cell number */
+.carousel-cell:before {
+    display: block;
+    text-align: center;
+    content: counter(carousel-cell);
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+}
+.container-grid {
+
+    display: grid;
+
+    grid-template: 200px 200px/200px 200px 200px 200px;
+
+    margin-left: auto;
+
+    margin-right: auto;
+
+    width: 1024px;
+
+}
+
+
+
+
+.container-grid div {
+
+    background-color: black;
+
+    margin: 5%;
+
+
+
+
+}
+
+
+
+
+section {
+
+    margin: 10% auto;
+
+}
+
+
+
+
+.title,
+
+.content {
+
+    text-align: center;
+
+}
