--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 }
 
 .container-grid div {
-    background-color: black;
+    background-color:white;
     margin: 5%;
 
 }
@@ -129,3 +129,33 @@ footer {
 .fa-instagram {
     color: white;
 }
+
+/* just incase of conflict */
+.content-img{
+    width: 100%;
+        height: 100%;
+object-fit: cover;
+    }
+    .fullscreen{
+        color:black;
+        display:none;
+        grid-template:20px 200px 200px/30% 70% ;
+        gap:10px;
+        width:fit-content;
+        background-color:white;
+        margin:5% auto;
+        padding:5%;
+        justify-content:space-evenly;
+        overflow-x: hidden;
+        overflow-y:auto;
+    }
+
+    .fullscreen a{
+    color:black;
+     }
+                
+.fullscreen img{
+width:200px;
+height:200px;
+}
+
