--- a/assets/style.css
+++ b/assets/style.css
@@ -133,8 +133,8 @@ footer {
 /* just incase of conflict */
 .content-img{
     width: 100%;
-        height: 100%;
-object-fit: cover;
+    height: 100%;
+    object-fit: cover;
     }
     .fullscreen{
         color:black;
@@ -148,14 +148,60 @@ object-fit: cover;
         justify-content:space-evenly;
         overflow-x: hidden;
         overflow-y:auto;
+        font-size: 1.25em;
     }
 
-    .fullscreen a{
-    color:black;
-     }
-                
+
+             
 .fullscreen img{
 width:200px;
 height:200px;
 }
 
+.fullscreen a{
+    color:red;
+    font-weight:900;
+    border:1px solid salmon;
+    padding:10px;
+    border-radius:8px;
+    background-color:lightcoral;
+    width:fit-content;
+    height:fit-content;
+    position: relative;
+    bottom:50px;
+}
+.fullscreen a:hover{
+    transition:.5s;
+    filter: brightness(50%);
+}
+.fullscreen li{
+    list-style-type:none;
+    margin:1% 0;
+}
+
+.recipeSpan{
+    display:flex;
+    margin-bottom:2%;
+}
+.recipeSpan img{
+    margin-left:5%;
+    position: relative;
+    top:30px;
+    width:40px;
+    height:40px;
+}
+.instructFull div{
+    display:flex;
+    justify-content:center;
+}
+.instructFull input{
+    margin-right:5%;
+}
+.escImg{
+    height:80px;
+    width:80px;
+    display:none;
+}
+.escImg:hover{
+filter:brightness(50%);
+}
