--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,75 @@
+body {
+    background-position: top center;
+    background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 1.125rem;
+    background-color: rgba(254, 207, 7, 1);
+}
+
+.container {
+    width: 1024px;
+    margin-right: auto;
+}
+
+img {
+    margin-left: 15%;
+}
+
+header {
+    z-index: 1;
+    position: relative;
+    left: 385px;
+    bottom: 600px;
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid lightgrey;
+    justify-content: center;
+}
+
+.navbutton {
+    padding: 11px 25px;
+    font-family: 'Playfair Display', serif;
+    display: inline-block;
+    position: relative;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+h1 {
+    color: rgba(0, 0, 0, 1);
+}
+
+    /* Main Section */
+
+main {
+    min-height: 300px;
+    display: flex;
+    align-items: center;
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+    color: black;
+}
+
+/* Carousel Section */
+
+h2 {
+    color: black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content {
+    margin-left: 150px;
+    /* margin-right: auto; */
+}
+
 .container-grid {
     display: grid;
     grid-template: 200px 200px/200px 200px 200px 200px;
@@ -9,7 +81,6 @@
 .container-grid div {
     background-color:white;
     margin: 5%;
-
 }
 
 section {
@@ -39,96 +110,6 @@ section {
     font-size: 80px;
     color: white;
 }
-html {
-    background-image: linear-gradient(#FC5E55, #FA4083);
-}
-
-body {
-    background-position: top center;
-    background-repeat: no-repeat;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    font-size: 1.125rem;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
-
-
-.container {
-    width: 1024px;
-    min-height: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid lightgrey;
-}
-
-.navbutton {
-    border: 1px solid white;
-    padding: 11px 25px;
-    font-family: 'Playfair Display', serif;
-    display: inline-block;
-    position: relative;
-}
-
-main {
-    min-height: 300px;
-    display: flex;
-    align-items: center;
-}
-
-.footer-social a {
-    color: white;
-}
-
-#footer-heading {
-    color: white;
-}
-
-.footer-bottom {
-    color: white;
-}
-
-footer {
-    padding-top: 40px;
-    background-color: gray;
-    height: 200px;
-    text-align: center;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 20px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-    color: white;
-}
-
-.fa-twitter {
-    color: white;
-}
-
-.fa-instagram {
-    color: white;
-}
 
 /* just incase of conflict */
 .content-img {
@@ -151,8 +132,6 @@ footer {
     overflow-y: auto;
     font-size: 1.25em;
 }
-
-
 
 .fullscreen img {
     width: 200px;
@@ -254,3 +233,127 @@ width:200px;
 height:200px;
 }
 
+    /* Review Section */
+
+    .reviews {
+        justify-content: space-between;
+        background-color: black;
+    }
+
+    .testimonial-photo-section {
+        height: 600px;
+        width: 600px;
+        background-color: black;
+        display: inline-block;
+        position: relative;
+        margin-left: 200px;
+        padding-top: 30px;
+
+    }
+
+    .testimonial-text-section {
+        height: 300px;
+        min-width: 500px;
+        background-color: black;
+        display: inline-block;
+        position: relative;
+        margin-left: 100px;
+        bottom: 300px;
+        padding-bottom: 100px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .testimonial-text-section span {
+        font-size: 20px;
+        color: rgba(254, 207, 7, 1);
+    }
+
+    .testimonial-text-section p {
+        font-size: 15px;
+        color: white;
+    }
+
+    .reviews h2 {
+        color: rgba(254, 207, 7, 1);
+        text-align: center;
+        padding-top: 40px;
+        font-size: 50px;
+
+    }
+
+    /* Basic styling for the container and sliding div */
+    .slide-container {
+        width: 400px;
+        min-height: 150px;
+        overflow: hidden;
+        /* Hide overflowing content */
+        position: relative;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 50px;
+    }
+
+
+    .sliding-div {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: none;
+    }
+
+    .current {
+        transform: translateX(0);
+        /* Start with the first div visible */
+        display: block;
+    }
+
+    /* Footer Section */
+
+    .footer-social a {
+        color: black;
+    }
+
+    #footer-heading {
+        color: black;
+    }
+
+    .footer-bottom {
+        color: black;
+    }
+
+    footer {
+        padding-top: 40px;
+        background-color: rgba(254, 207, 7, 1);
+        height: 200px;
+        text-align: center;
+    }
+
+    .fa {
+        padding: 20px;
+        font-size: 30px;
+        width: 20px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50%;
+    }
+
+    .fa:hover {
+        opacity: 0.7;
+    }
+
+    .fa-facebook {
+        color: black;
+    }
+
+    .fa-twitter {
+        color: black;
+    }
+
+    .fa-instagram {
+        color: black;
+    }
