--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
+* {
+    @media (max-width: 800px){
+        a{
+            font-size: max(20px, 3vw);
+        }
+    }
+}
+
+
 body {
     background-position: top center;
     background-repeat: no-repeat;
@@ -9,36 +18,41 @@ body {
 
 .container {
     width: 1024px;
+    background-color: rgba(254, 207, 7, 1);
+    margin-left: auto;
     margin-right: auto;
-}
-
-.basitImage {
-    margin-left: 25%;
+    border-bottom: 1px solid black;
+    margin-bottom: 30px;
+    padding-top: 20px;
 }
 
 header {
-    z-index: 1;
-    position: relative;
-    left:700px;
-    bottom: 600px;
+    width: 1024px;
+    height: 80px;
+    background-color: rgba(254, 207, 7, 1);
     display: flex;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid lightgrey;
-    justify-content: center;
 }
 
 .navbutton {
+    margin-left: auto;
+    margin-right: auto;
     padding: 11px 25px;
     font-family: 'Playfair Display', serif;
-    display: inline-block;
-    position: relative;
 }
 
 a {
-    color: white;
+    color: black;
     text-decoration: none;
+} 
+
+.basitImage {
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding-bottom: 60px;
 }
 
 h1 {
@@ -103,7 +117,6 @@ section {
     counter-increment: carousel-cell;
 }
 
-
 /* just incase of conflict */
 .content-img {
     width: 100%;
@@ -161,14 +174,13 @@ section {
 
 }
 
-
 #recipeSpan img {
     margin-left: 1%;
     position: relative;
     top: 30px;
     width: 40px;
     height: 40px;
-} 
+}
 
 .instructFull div {
     display: flex;
@@ -215,9 +227,9 @@ section {
 
     }
                 
-.fullscreen img{
-width:200px;
-height:200px;
+    .fullscreen img {
+        width: 200px;
+        height: 200px;
 }
 
     /* Review Section */
@@ -225,6 +237,7 @@ height:200px;
     .reviews {
         justify-content: space-between;
         background-color: black;
+        border-bottom: 1px solid rgba(254, 207, 7, 1);
     }
 
     .testimonial-photo-section {
@@ -246,7 +259,6 @@ height:200px;
         position: relative;
         margin-left: 100px;
         bottom: 300px;
-        padding-bottom: 100px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
@@ -302,22 +314,27 @@ height:200px;
     /* Footer Section */
 
     .footer-social a {
-        color: black;
+        color: rgba(254, 207, 7, 1);
     }
 
     #footer-heading {
-        color: black;
+        color: rgba(254, 207, 7, 1);
+        font-size: 20px;
     }
 
     .footer-bottom {
-        color: black;
+        color: rgba(254, 207, 7, 1);
+        font-size: 20px;
     }
 
     footer {
         padding-top: 40px;
-        background-color: rgba(254, 207, 7, 1);
+        background-color: black;
         height: 200px;
         text-align: center;
+        font-family: 'Playfair Display', serif;
+        font-size: 20px;
+        padding-bottom: 20px;
     }
 
     .fa {
@@ -334,13 +351,14 @@ height:200px;
     }
 
     .fa-facebook {
-        color: black;
+        color: rgba(254, 207, 7, 1);
+
     }
 
     .fa-twitter {
-        color: black;
+        color: rgba(254, 207, 7, 1);
     }
 
     .fa-instagram {
-        color: black;
+        color: rgba(254, 207, 7, 1);
     }
