--- a/assets/search-style.css
+++ b/assets/search-style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(254, 207, 7, 1);    
+    background-color: rgba(254, 207, 7, 1);
 }
 
 .head-container {
@@ -38,7 +38,7 @@ a {
 
 #about-btn-clr {
     color: black;
-} 
+}
 
 main {
     width: 1024px;
@@ -58,7 +58,7 @@ main {
     margin-right: auto;
 }
 
-#foodSearch{
+#foodSearch {
     padding: 12px 20px;
     margin: 20px 0;
     box-sizing: border-box;
@@ -117,4 +117,10 @@ footer {
 
 .fa-instagram {
     color: rgba(254, 207, 7, 1);
+}
+
+@media (max-width: 800px) {
+    a {
+        font-size: max(20px, 3vw);
+    }
 }
