--- a/assets/aboutus.css
+++ b/assets/aboutus.css
@@ -143,8 +143,8 @@ span {
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: auto;
 }
 
 /* Our Names Text Decoration */
