--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,7 @@ header {
                 border-bottom: 1px solid lightgrey;
                 justify-content: center;
                 width: fit-content
-
+}
 .container {
     width: 1024px;
     background-color: rgba(254, 207, 7, 1);
@@ -45,11 +45,11 @@ header {
 header {
     width: 1024px;
     height: 80px;
-    background-color: rgba(254, 207, 7, 1);
     display: flex;
 }
 
 .navbutton {
+
     margin-left: auto;
     margin-right: auto;
     padding: 11px 25px;
@@ -57,7 +57,7 @@ header {
 }
 
 a {
-    color: black;
+        color: white;
     text-decoration: none;
 }
 
@@ -376,330 +376,181 @@ height:200px;
     /* media queries */
 
 @media only screen and (max-width:991px) and (min-width:768px) {
+
     /* tablet */
     * {
-            font-size: 16px
-        }
-    
-        h1 {
-            font-size: 1.5rem;
-        }
-    
-        h2 {
-            font-size: 1.25rem;
-        }
-    
-        /* .basitImage {
+        font-size: 16px
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    h2 {
+        font-size: 1.25rem;
+    }
+
+    /* .basitImage {
             margin-left:.5%;
             width:900px;
             height: 400px;
         } */
-    
-        header {
-            z-index: 1;
-            position: relative;
-            left: 260px;
-            bottom: 350px;
-            display: flex;
-            align-items: center;
-            padding-top: 0px;
-            padding-bottom: 0px;
-            border-bottom: 1px solid lightgrey;
-            justify-content: center;
-            width: fit-content
-        }
-    
-        .container {
-            width: 767px;
-            margin-right: auto;
-        }
-    
-        .herobox1 {
-            margin-left: 10%;
-        }
-    
-        .herobox1 p,
-        .herobox1 h1 {
-            width: 65%;
-            margin-left: 0%;
-        }
-    
-        .popularFood {
-            text-align: center;
-            margin-top: 100px;
-        }
-                        .title h2{
-                            margin-right:20%
-                        }
-        .content {
-            margin-left: 0px;
-        }
-    
-        .container-grid {
-            display: grid;
-            grid-template: repeat(4, 300px)/repeat(2, 300px);
-            gap: 10px;
-            margin-left: 10%;
-        }
-    
-        .reviews {
-            display: flex;
-            justify-content: center;
-            background-color: none;
-            margin-left: 1%
-        }
-    
-        .testimonial-text-section {
-            height: fit-content;
-            width: fit-content;
-            background-color: none;
-            display: block;
-            position: static;
-            margin-left: 0px;
-            padding-bottom: 0px;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            position: relative;
-            top: 200px;
-            right: 400px;
-        }
+
+header {
+    z-index: 1;
+    position: absolute;
+    left: 40%;
+    top: 10%;
+    display: flex;
+    align-items: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-bottom: 1px solid lightgrey;
+    justify-content: center;
+    width: fit-content
+}
+
+    .container {
+        width: 767px;
+        margin-right: auto;
+    }
+
+    .herobox1 {
+        margin-left: 10%;
+    }
+
+    .herobox1 p,
+    .herobox1 h1 {
+        width: 65%;
+        margin-left: 0%;
+    }
+
+    .popularFood {
+        text-align: center;
+        margin-top: 100px;
+    }
+
+    .title h2 {
+        margin-right: 20%
+    }
+
+    .content {
+        margin-left: 0px;
+    }
+
+    .container-grid {
+        display: grid;
+        grid-template: repeat(4, 300px)/repeat(2, 300px);
+        gap: 10px;
+        margin-left: 10%;
+    }
+
+    .reviews {
+        display: flex;
+        justify-content: center;
+        background-color: none;
+        margin-left: 1%
+    }
+
+    .testimonial-text-section {
+        height: fit-content;
+        width: fit-content;
+        background-color: none;
+        display: block;
+        position: static;
+        margin-left: 0px;
+        padding-bottom: 0px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        position: relative;
+        top: 200px;
+        right: 400px;
+    }
 }
 
 
 @media only screen and (max-width: 767px) {
+
     /* phone  */
-    *{
-        font-size:16px
+    * {
+        font-size: 16px
     }
-    h1{
-        font-size:1.5rem;
+
+    h1 {
+        font-size: 1.5rem;
     }
-     h2 {
+
+    h2 {
         font-size: 1.25rem;
-        }
+    }
 
     /* .basitImage{
         margin-left: 5%;
         width:650px;
         height:400px;
     } */
-        header {
-            z-index: 1;
-            position: relative;
-            left: 200px;
-            bottom:350px;
-            display: flex;
-            align-items: center;
-            padding-top: 0px;
-            padding-bottom: 0px;
-            border-bottom: 1px solid lightgrey;
-            justify-content: center;
-            width:fit-content
-        }
-        .container {
-            width: 767px;
-            margin-right: auto;
-        }
+    header {
+        z-index: 1;
+        position: relative;
+        left: 200px;
+        bottom: 350px;
+        display: flex;
+        align-items: center;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        border-bottom: 1px solid lightgrey;
+        justify-content: center;
+        width: fit-content
+    }
 
-        .herobox1  {
-        margin-left:10%;
-                }
+    .container {
+        width: 767px;
+        margin-right: auto;
+    }
 
-        .herobox1 p,.herobox1 h1{
-                width: 65%;
-                margin-left:0%;
-        }
-        .popularFood{
-        margin-top:100px;
-        }
-        .content {
-            margin-left:0px;
-      }
-          .container-grid {
-              display: grid;
-    grid-template: repeat(4, 300px)/repeat(1,300px);
-              gap: 10px;
-              margin-left:30%;
-          }
-                  .reviews {
-                    display:flex;
-                      justify-content: center;
-                      background-color:none;
-                      margin-left:1%
-                  }
-        
-        .testimonial-text-section {
-        height:fit-content;
-        width:fit-content;
-        background-color:none;
-        display:block;
-        position:static;
+    .herobox1 {
+        margin-left: 10%;
+    }
+
+    .herobox1 p,
+    .herobox1 h1 {
+        width: 65%;
+        margin-left: 0%;
+    }
+
+    .popularFood {
+        margin-top: 100px;
+    }
+
+    .content {
+        margin-left: 0px;
+    }
+
+    .container-grid {
+        display: grid;
+        grid-template: repeat(4, 300px)/repeat(1, 300px);
+        gap: 10px;
+        margin-left: 30%;
+    }
+
+    .reviews {
+        display: flex;
+        justify-content: center;
+        background-color: none;
+        margin-left: 1%
+    }
+
+    .testimonial-text-section {
+        height: fit-content;
+        width: fit-content;
+        background-color: none;
+        display: block;
+        position: static;
         margin-left: 0px;
         padding-bottom: 0px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         position: relative;
-            top: 200px;
-            right:400px;
+        top: 200px;
+        right: 400px;
     }
-
-/* No Merege Conflicts */
-/* external css: flickity.css */
-.carousel-cell {
-    width: 50%;
-    height: 200px;
-    margin-right: 10px;
-    background: gray;
-    border-radius: 5px;
-    counter-increment: carousel-cell;
-}
-
-
-.container-grid {
-
-    display: grid;
-
-    grid-template: 200px 200px/200px 200px 200px 200px;
-
-    margin-left: auto;
-
-    margin-right: auto;
-
-    width: 1024px;
-
-}
-
-.fullscreen img {
-    width: 200px;
-    height: 200px;
-}
-
-/* Review Section */
-
-.reviews {
-    justify-content: space-between;
-    background-color: black;
-    border-bottom: 1px solid rgba(254, 207, 7, 1);
-}
-
-.testimonial-photo-section {
-    height: 600px;
-    width: 600px;
-    background-color: black;
-    display: inline-block;
-    position: relative;
-    margin-left: 200px;
-    padding-top: 30px;
-
-}
-
-.testimonial-text-section {
-    height: 300px;
-    min-width: 500px;
-    background-color: black;
-    display: inline-block;
-    position: relative;
-    margin-left: 100px;
-    bottom: 300px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.testimonial-text-section span {
-    font-size: 20px;
-    color: rgba(254, 207, 7, 1);
-}
-
-.testimonial-text-section p {
-    font-size: 15px;
-    color: white;
-}
-
-.reviews h2 {
-    color: rgba(254, 207, 7, 1);
-    text-align: center;
-    padding-top: 40px;
-    font-size: 50px;
-
-}
-
-/* Basic styling for the container and sliding div */
-.slide-container {
-    width: 400px;
-    min-height: 150px;
-    overflow: hidden;
-    /* Hide overflowing content */
-    position: relative;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 50px;
-}
-
-
-.sliding-div {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    display: none;
-}
-
-.current {
-    transform: translateX(0);
-    /* Start with the first div visible */
-    display: block;
-}
-
-/* Footer Section */
-
-.footer-social a {
-    color: rgba(254, 207, 7, 1);
-}
-
-#footer-heading {
-    color: rgba(254, 207, 7, 1);
-    font-size: 20px;
-}
-
-.footer-bottom {
-    color: rgba(254, 207, 7, 1);
-    font-size: 20px;
-}
-
-footer {
-    padding-top: 40px;
-    background-color: black;
-    height: 200px;
-    text-align: center;
-    font-family: 'Playfair Display', serif;
-    font-size: 20px;
-    padding-bottom: 20px;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 20px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-    color: rgba(254, 207, 7, 1);
-
-}
-
-.fa-twitter {
-    color: rgba(254, 207, 7, 1);
-}
-
-.fa-instagram {
-    color: rgba(254, 207, 7, 1);
 
 }
